# snmp-trap-alertmanager

./: Cargo.toml  default.nix
.sqlx/: query-c76ce0126d905df9f24db17de5b1ae4fc96a87e7d68b39559636d0262d90ab72.json
example_alerts/: alerts.yaml
src/: alertmanager.rs  alerts.rs  config.rs  enrichment.rs  main.rs  sanitize.rs  trap_db.rs  web.rs
templates/: alerts.html
